--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -837,3 +837,80 @@ system.download.triggerfileexists.overwrite = Datei überschreiben
 system.download.triggerfileexists.skip = Link überspringen
 train.choose.folder = Wählen sie einen Ordner aus
 ﻿train.chooser.title = jDownloader :: TrainAll
+addons.jdlowspeed.statusmessage.enabled = Low Speederkennung einschalten
+addons.jdshutdown.menu.enable = Herunterfahren aktivieren
+gui.config.captcha.CES.tab = Captcha Exchange Service
+gui.config.captcha.JAC.tab = jAntiCaptcha
+gui.config.captcha.ces.btn_messages = Meine Nachrichten anzeigen
+gui.config.captcha.ces.btn_register = Registrieren
+gui.config.captcha.ces.btn_sendmessages = Nachricht senden
+gui.config.captcha.ces.btn_stats = Meine Statistiken
+gui.config.captcha.ces.help = http://jdownloader.ath.cx/page.php?id=106
+gui.config.captcha.ces.pass = C.E.S. Passwort
+gui.config.captcha.ces.user = C.E.S. Benutzername
+gui.config.captcha.useCESPenaltyWarning = Durch frühzeitige Rückfrage Punktstrafen vermeiden
+gui.config.captcha.use_Ces = CaptchaExchangeServer verwenden(Neustart nötig)
+gui.config.download.errorretries = Max. Neuversuche bei einem Fehler
+gui.config.download.retries = Max. Neuversuche bei vorrübergehenden Hosterproblemen
+gui.config.eventmanager.trigger.btn = Trigger ändern
+gui.config.general.filelogger = Erstelle Logdatei im ./logs/ Ordner
+gui.config.gui.soundTheme = Soundtheme
+gui.menu.action.ces.accel = CTRL+h
+gui.menu.action.ces.desc = C.E.S. Eingabe aktivieren
+gui.menu.action.ces.mnem = U
+gui.menu.action.ces.name = CES Eingabe
+gui.menu.action.edit.items_bottom.accel = 
+gui.menu.action.edit.items_bottom.desc = Markierte Links/Pakete ans Ende verschieben
+gui.menu.action.edit.items_bottom.mnem =  
+gui.menu.action.edit.items_bottom.name = Ans Ende
+gui.menu.action.edit.items_down.accel = STRG+UNTEN
+gui.menu.action.edit.items_down.desc = Markierte Links/Pakete nach unten verschieben
+gui.menu.action.edit.items_down.mnem =  
+gui.menu.action.edit.items_down.name = Nach unten
+gui.menu.action.edit.items_top.accel =  
+gui.menu.action.edit.items_top.desc = Markierte Links/Pakete an den Anfang verschieben
+gui.menu.action.edit.items_top.mnem =  
+gui.menu.action.edit.items_top.name = An den Anfang
+gui.menu.action.edit.items_up.accel = STRG+OBEN
+gui.menu.action.edit.items_up.desc = Markierte Links/Pakete nach oben verschieben
+gui.menu.action.edit.items_up.mnem =  
+gui.menu.action.edit.items_up.name = Nach oben
+gui.splash.text.configLoaded = lade Konfiguration
+gui.splash.text.finished = Fertig
+gui.splash.text.initcontroller = Starte Controller
+gui.splash.text.loadGUI = Lade Benutzeroberfläche
+gui.splash.text.loadLanguage = Lade Sprachen
+gui.splash.text.loadPlugins = Lade Plugins
+gui.splash.text.loaddownloadqueue = Lade Downloadliste
+gui.splash.text.loadmodules = Lade Module und Addons
+gui.splash.text.update = Prüfe auf Updates
+interaction.simpleExecute.cmd = Befehl
+interaction.simpleExecute.executein = Ausführen in (Ordner)
+interaction.simpleExecute.extended = Erweiterte Einstellungen
+interaction.simpleExecute.helpLink = http://jdownloader.ath.cx/page.php?id=119
+interaction.simpleExecute.name = Programm/Script ausführen
+interaction.simpleExecute.parameter = Parameter (1 Parameter pro Zeile)
+interaction.simpleExecute.test = Jetzt ausführen
+interaction.simpleExecute.useexecutein = Benutzerdefiniertes 'Ausführen in'
+interaction.simpleExecute.waitForTermination = Warten bis Befehl beendet wurde
+interaction.simpleExecute.waittime = Maximale Ausführzeit
+plugins.container.dlc.showdialogoncreatedlc = Nach dem Erstellen Rückmeldung zeigen
+plugins.optional.RemoteControl.name = RemoteControl
+plugins.optional.folderwatch.delete = Entfernen
+plugins.optional.folderwatch.folder = Ordner:
+plugins.optional.folderwatch.name = FolderWatch
+plugins.optional.folderwatch.waittime = Wartezeit
+plugins.optional.jdlowspeed.maxspeed = Maximale Internetgeschwindigkeit in kb/s (DSL 3000≈350kb/s)
+plugins.optional.jdlowspeed.minspeed = Mindestgeschwindigkeit für einen Download in kb/s
+plugins.optional.jdlowspeed.name = LowSpeed Erkennung
+plugins.optional.jdlowspeed.rsonly = Nur Raidshare überwachen
+plugins.optional.jdshutdown.name = JDShutdown
+plugins.optional.webinterface.refresh = AutoRefresh
+plugins.optional.webinterface.refresh_interval = Refresh Interval
+plugins.rapidshare.menu.forcefreewhilehh = Free Download während Happy Hour erzwingen
+plugins.rapidshare.menu.happyHour = Happy Hours
+main.start.logwarning.title = Logwarnung
+main.start.logwarning.body = ACHTUNG. Das Loglevel steht auf %s und der Dateischreiber ist %s. \r\nDiese Einstellungen belasten das System und sind nur zur Fehlersuche geeignet.
+main.urls.faq=http://jdownloader.ath.cx/faq.php?lng=deutsch
+main.status.inactive=aus
+main.status.active = an
