--- a/trunk/ressourcen/jd/languages/Turkish.lng
+++ b/trunk/ressourcen/jd/languages/Turkish.lng
@@ -443,7 +443,7 @@ gui.menu.action.exit.accel = CTRL+X
 gui.menu.action.exit.desc = Programdan çık
 gui.menu.action.exit.mnem = B
 gui.menu.action.exit.name = Çıkış
-gui.menu.action.help.accel = CTRL+9
+gui.menu.action.help.accel = F1
 gui.menu.action.help.desc = Show support
 gui.menu.action.help.mnem = s
 gui.menu.action.help.name = Destek
