--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -436,11 +436,11 @@ gui.menu.action.edit.items_remove.accel = DELETE
 gui.menu.action.edit.items_remove.desc = Links aus der Liste entfernen
 gui.menu.action.edit.items_remove.mnem = D
 gui.menu.action.edit.items_remove.name = Entfernen
-gui.menu.action.exit.accel = CTRL+X
+gui.menu.action.exit.accel = CTRL+Q
 gui.menu.action.exit.desc = Beenden
 gui.menu.action.exit.mnem = B
 gui.menu.action.exit.name = Beenden
-gui.menu.action.help.accel = CTRL+9
+gui.menu.action.help.accel = F1
 gui.menu.action.help.desc = Support aufrufen
 gui.menu.action.help.mnem = s
 gui.menu.action.help.name = Support
