--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -500,7 +500,7 @@ gui.messages.outofmemoryerror = Ein Speicherfehler wurde festgestellt. Neustart 
 gui.status.timeoutdetected = Timeout
 gui.statusbar.premium = Premium
 gui.statusbar.sim_ownloads = Max.Dls.
-gui.statusbar.speed = Geschw.
+gui.statusbar.speed = Max. Geschw.
 gui.tab.plugin_activity.column_plugin = Module
 gui.tab.plugin_activity.column_progress = Fortschritt
 gui.table.contextmenu.abort = abbrechen
