--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -1008,3 +1008,33 @@ plugins.optional.webinterface.refresh = AutoRefresh
 plugins.optional.webinterface.refresh_interval = Refresh Interval
 plugins.rapidshare.captcha.progress = Captchadetection
 gui.config.captcha.use_Ces = Use Captcha Exchange Service(Need restart)
+addons.jdlowspeed.statusmessage.enabled = Enable lowspeed detection
+download.error.message.crc = Wrong checksum
+gui.config.general.filelogger = Create logfile in ./logs/ directory
+gui.config.packagemanager.name = Packagemanager
+gui.config.plugin.optional.btn_openDir = Open Addon directory
+gui.config.plugin.optional.link_help = http://www.jdownloader.ath.cx/wiki/index.php?title=Uninstalling_Add-ons
+gui.config.plugin.optional.linktext_help = Help
+gui.config.webupdate.name = Webupdate
+gui.downloadlink.aborted = [aborted]
+gui.downloadlink.status.crcfailed = Checksum error
+gui.linklist.newpackage.message = Name of the new package
+gui.linklist.newpackage.title = Make new package
+gui.menu.action.about.accel = a
+gui.menu.action.about.desc = About jDownloader
+gui.menu.action.about.mnem = a
+gui.menu.action.about.name = About
+gui.menu.plugins.help = ?
+gui.table.draganddrop.cancel = Cancel
+gui.table.draganddrop.movepackagebefore = Insert before '%s'
+gui.table.draganddrop.movepackageend = Insert after '%s'
+gui.warning.reconnect.hasbeendisabled = Reconnect disabled!
+gui.warning.reconnect.hasbeendisabled.tooltip = Um erfolgreich einen Reconnect durchführen zu können muss diese Funktion wieder aktiviert werden.
+interaction.trigger.exit = Shutdown JD
+interaction.trigger.exit.desc = Will be executed before shuting down JD
+plugins.decrypt.rlslog.hosterlist = Hosterlist (one hoster per row)
+plugins.decrypt.shareonall.ignorelist = List of ignored hoster (one hoster per row)
+plugins.optional.jdlowspeed.maxspeed = Max. internetspeed in kb/s (DSL 3000≈350kb/s)
+plugins.optional.jdlowspeed.minspeed = Min speed of a single download in kb/s
+plugins.optional.jdlowspeed.name = LowSpeed detection
+plugins.optional.jdlowspeed.rsonly = Observe only rapidshare.com
