--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -876,6 +876,10 @@ gui.menu.action.edit.items_up.accel = STRG+OBEN
 gui.menu.action.edit.items_up.desc = Markierte Links/Pakete nach oben verschieben
 gui.menu.action.edit.items_up.mnem =  -
 gui.menu.action.edit.items_up.name = Nach oben
+gui.menu.action.about.desc=Informationen zu jDownloader
+gui.menu.action.about.name=Über jDownloader
+gui.menu.action.about.mnem= -
+gui.menu.action.about.accel= -
 gui.splash.text.configLoaded = lade Konfiguration
 gui.splash.text.finished = Fertig
 gui.splash.text.initcontroller = Starte Controller
