--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -962,7 +962,7 @@ sys.confirm.doRestart = These settings needing a restart. Execute restart now?
 sys.dlc.error_version = DLC encryption failed. Please be shure you're using the last JD-version.
 sys.dlc.success = DLC encryption successfully. Extract for testing now?
 sys.header.jdownloader = jDownloader
-sys.message.welcome = Visit us at:
+sys.message.welcome = Welcome to JDownloader
 sys.warning.dlcerror = Defect DL-Container
 sys.warning.dlcerror.server = <b>Do you have installed the newest version of jD?</b> <br>Server response:
 sys.warning.dlcerror_io = DLC: Server Error (offline?)
