--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -77,7 +77,7 @@ downloadlink.status.error.no_connection = Keine Netzwerkverbindung
 downloadlink.status.error.no_free_space = Uu wenig Speicherplatz
 downloadlink.status.error.not_owner = Schon in Bearbeitung
 downloadlink.status.error.not_uploaded = Upload Fehler
-downloadlink.status.error.plugin_specific = Plugin Fehler
+downloadlink.status.error.plugin_specific = Plugin: 
 downloadlink.status.error.premium = Premium Fehler
 downloadlink.status.error.security = Lese/Schreib- Fehler
 downloadlink.status.error.static_wait = Wartezeit
